corrije os erros, não finaliza o projeto

--- a/MapokoTube/Views/Home/Index.cshtml
+++ b/MapokoTube/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="album py-5">
     <div class="text-center mb-5">
-        <h1 class="display-4">Tudo sobre o mundo dos Filmes</h1>
+        <h1 class="display-4">Videos De Cria</h1>
     </div>
 
     <div class="container">
@@ -20,8 +20,7 @@
                     <div class="card-body">
                         <p class="card-text text-center">@Video.Name</p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <small class="text-body-secondary">@(Video.VideoFile == 0 ? "Livre" : Video.VideoFile + " anos")</small>
-                            <small class="text-body-secondary">@Video.HourDuration</small>
+                            @* <small class="text-body-secondary">@Video.HourDuration</small> *@
                         </div>
                     </div>
                 </div>
