--- a/MapokoTube/Views/Home/Index.cshtml
+++ b/MapokoTube/Views/Home/Index.cshtml
@@ -5,27 +5,34 @@
 
 <div class="album py-5">
     <div class="text-center mb-5">
-        <h1 class="display-4">Videos De Cria</h1>
+        <h1 class="display-4">Videos de cria</h1>
     </div>
 
     <div class="container">
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
-        @foreach (Video Video in Model)
-        {            
-            <div class="col">
-                <div class="card shadow-sm">
-                    <img class="bd-placeholder-img card-img-top" width="100%" height="400"
-                    src="@Video.Thumbnail">
-                    <div class="card-body">
-                        <p class="card-text text-center">@Video.Name</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            @* <small class="text-body-secondary">@Video.HourDuration</small> *@
+            @foreach (Video video in Model)
+            {
+                <a asp-controller="Home" asp-action="Video" asp-route-id="@video.Id" class="text-decoration-none">
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <img class="bd-placeholder-img card-img-top" width="100%" height="400" src="@video.Thumbnail">
+                            <div class="card-body">
+                                <p class="card-text text-center">@video.Name</p>
+                                <div class="d-flex align-items-center mb-2">
+                                    @foreach (Tag tag in video.Tags)
+                                    {
+                                        <span class="badge bg-secondary me-2">@tag.Name</span>
+                                    }
+                                </div>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <small class="text-body-secondary">@video.Duration</small>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        }
+                </a>
+            }
         </div>
     </div>
 </div>
